<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:id="@+id/tv_estado_imagen" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="16dp"
        android:text="@string/foto_cargando" android:textSize="20sp"
        android:accessibilityLiveRegion="polite" />
    <ImageView android:id="@+id/iv_foto" android:layout_width="match_parent"
        android:layout_height="0dp" android:layout_weight="1"
        android:contentDescription="@string/descripcion_foto" android:scaleType="fitCenter" />
    <Button android:id="@+id/btn_volver_foto" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="16dp"
        android:text="@string/volver" />
</LinearLayout>
